@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
@@ -24,6 +25,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.release>1.11</maven.compiler.release>
+        <jdk.version>11</jdk.version>
+        <javafx.version>11</javafx.version>
+        <exec.mainClass>edu.pse.beast.highlevel.MainClass</exec.mainClass>
     </properties>
 
     <distributionManagement>
@@ -46,12 +50,12 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>11</version>
+            <version>13-ea+8</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>11</version>
+            <version>13-ea+8</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -59,37 +63,21 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.gluonhq/charm-down-core -->
         <dependency>
             <groupId>com.gluonhq</groupId>
             <artifactId>charm-down-core</artifactId>
             <version>3.8.6</version>
         </dependency>
-
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-swing</artifactId>
-            <version>11-ea+24</version>
+            <version>13-ea+8</version>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.fxmisc.richtext/richtextfx -->
         <dependency>
             <groupId>org.fxmisc.richtext</groupId>
             <artifactId>richtextfx</artifactId>
-            <version>0.9.3</version>
+            <version>0.10.1</version>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.fxmisc.undo/undofx<dependency> 
-            <groupId>org.fxmisc.undo</groupId> <artifactId>undofx</artifactId><version>2.0.0</version> 
-            </dependency> -->
-
-        <!-- https://mvnrepository.com/artifact/org.reactfx/reactfx -->
-        <dependency>
-            <groupId>org.reactfx</groupId>
-            <artifactId>reactfx</artifactId>
-            <version>2.0-M5</version>
-        </dependency>
-
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
@@ -98,7 +86,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.8.1</version>
+            <version>3.9</version>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
@@ -113,18 +101,6 @@
             <version>3.141.59</version>
         </dependency>
         <dependency>
-            <groupId>com.opera</groupId>
-            <artifactId>operadriver</artifactId>
-            <scope>test</scope>
-            <version>1.5</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.seleniumhq.selenium</groupId>
-                    <artifactId>selenium-remote-driver</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
             <version>4.7.2</version>
@@ -137,12 +113,7 @@
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna-platform</artifactId>
-            <version>5.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>de.erichseifert.gral</groupId>
-            <artifactId>gral-core</artifactId>
-            <version>0.11</version>
+            <version>5.3.1</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -152,25 +123,14 @@
     </dependencies>
 
     <build>
+        <finalName>Beast</finalName>
         <plugins>
-            <plugin>
+            <!-- plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
                 <configuration>
                     <mainClass>edu.pse.beast.highlevel.MainClass</mainClass>
-
-
-                    <compilerArgs>
-                        <arg>--add-exports</arg>
-                        <arg>javafx.graphics/com.sun.javafx.geom
-                            javafx.graphics/com.sun.javafx.text
-                            javafx.graphics/com.sun.javafx.scene.text</arg>
-                        <arg>--add-opens</arg>
-                        <arg>javafx.graphics/javafx.scene.text
-                            javafx.graphics/com.sun.javafx.text</arg>
-                    </compilerArgs>
-
                 </configuration>
                 <executions>
                     <execution>
@@ -179,6 +139,59 @@
                         <goals>
                             <goal>java</goal>
                          </goals>
+                    </execution>
+                </executions>
+            </plugin -->
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <!-- Instead of `exec:java`, use `javafx:run` to run the application -->
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.2</version>
+                <configuration>
+                    <vendor>KIT</vendor>
+                    <release>11</release>
+                    <jlinkImageName>beast</jlinkImageName>
+                    <launcher>beast</launcher>
+                    <mainClass>edu.pse.beast.highlevel.MainClass</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>run</id>
+                        <phase>execution</phase>
+                        <goals>
+                            <goal>java</goal>
+                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <generateBackupPoms>false</generateBackupPoms>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.0.0-M2</version>
+                <executions>
+                    <execution>
+                        <id>enforce-maven</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireMavenVersion>
+                                    <version>3.5.0</version>
+                                </requireMavenVersion>
+                                <requireJavaVersion>
+                                    <version>11</version>
+                                </requireJavaVersion>
+                            </rules>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -243,6 +256,9 @@
                         <param>edu.pse.beast.propertychecker.Result</param>
                         <param>edu.pse.beast.highlevel.javafx.resultpresenter.resultTypes.ResultPresentationType</param>
                     </services>
+                    <excludes>
+                        <exclude>module-info*</exclude>
+                    </excludes>
                 </configuration>
                 <executions>
                     <execution>
@@ -262,11 +278,41 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>3.0.0-M3</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.0</version>
+                    <version>3.8.1</version>
                     <configuration>
                         <release>11</release>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>3.1.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>3.0.0-M1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>3.0.0-M1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.1.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>3.1.0</version>
                 </plugin>
             </plugins>
         </pluginManagement>
